[package]
name = "myrust_shortener"
version = "0.1.0"
authors = ["miles <justmike2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "myrust_shortener"
crate-type = ["cdylib"]

[dependencies]
harsh = "0.1.2"

[dependencies.cpython]
version = "0.5.0"
features = ["extension-module"]
